--- a/src/app/modules/factura/listar-facturas/listar-facturas.html
+++ b/src/app/modules/factura/listar-facturas/listar-facturas.html
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <div class="card-mobile-footer">
-                        <span class="ver-detalle">👁️ Ver detalles →</span>
+                        <span class="ver-detalle">Ver detalles →</span>
                     </div>
                 </div>
             </div>
