--- a/src/app/modules/clientes/pages/crear-historial-clinico/crear-historial-clinico.html
+++ b/src/app/modules/clientes/pages/crear-historial-clinico/crear-historial-clinico.html
@@ -9,7 +9,8 @@
         <form [formGroup]="clienteForm" class="cliente-form-section">
             <!-- INFORMACIÓN PERSONAL -->
             <div class="section-title">
-                <h4>📋 Información Personal</h4>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-contact-icon lucide-contact"><path d="M16 2v2"/><path d="M7 22v-2a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v2"/><path d="M8 2v2"/><circle cx="12" cy="11" r="3"/><rect x="3" y="4" width="18" height="18" rx="2"/></svg>
+                <h4 style="margin-left: 3px;"> Información Personal</h4>
             </div>
 
             <div class="cliente-grid">
@@ -81,7 +82,8 @@
         <!-- HISTORIAL CLÍNICO -->
         <form [formGroup]="form" (ngSubmit)="guardar()">
             <div class="section-title">
-                <h4>👁️ Historial Clínico</h4>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-clipboard-clock-icon lucide-clipboard-clock"><path d="M16 14v2.2l1.6 1"/><path d="M16 4h2a2 2 0 0 1 2 2v.832"/><path d="M8 4H6a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h2"/><circle cx="16" cy="16" r="6"/><rect x="8" y="2" width="8" height="4" rx="1"/></svg>
+                <h4 style="margin-left: 3px ;">Historial Clínico</h4>
             </div>
 
             <!-- MEDIDAS PRINCIPALES -->
